update jvm args & review code